--- a/index.html
+++ b/index.html
@@ -546,6 +546,7 @@
 								</div>
 							</div>
 							<!-- ===== Contact Info Item End ===== -->
+							<!--TODO: #3 Email and Website Text Contents not Responsive-->
 							<!-- ===== Contact Info Item Start ===== -->
 							<div class="contact-info-item padd-15">
 								<div class="contact-info-box">
