Created 2 new issues

--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
 								<div class="row">
 									<div class="hard-skills padd-15">
 										<div class="skills-container">
+										<!--TODO: #5 Skills Tab and Content not responsive-->
 											<div class="skills-tab">
 												<!-- ===== Skill Header ===== -->
 												<div class="skills-header skills-active" data-target="#frontend">
@@ -560,6 +561,7 @@
 						<h3 class="contact-title padd-15">Send Me An Email</h3>
 						<h4 class="contact-subtitle padd-15">I'M VERY RESPONSIVE TO MESSAGES</h4>
 						<!-- ===== Contact Form Start ===== -->
+						<!--TODO: #4 Contact form JS not written-->
 						<div class="row">
 							<div class="contact-form padd-15">
 								<div class="row">
