--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							<div class="home-info padd-15">
 								<h3 class="hello">Hello, my name is <span class="name">Sandupa Abeywardana</span></h3>
 								<h3 class="my-profession">I'm a <span class="typing">web designer</span></h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut pulvinar ipsum. Nullam ut tristique mauris. Ut urna ligula, pulvinar quis quam ut, pellentesque semper justo.</p>
+								<p>Currently reading for my Bachelor's at the Sri Lanka Institute of Information Technology under the field of Information Technology. I have the potential ability in graphic designing, photography, videography, editing, web designing, digital content creation and social media marketing.<br><br>Feel free to contact me anytime. Look forward to working with you!</p>
 								<a href="files/Isum Sandupa Abeywardana - Curriculum Vitae.pdf" download class="btn">Download CV</a>
 								<a href="#contact" data-section-index="0" class="btn hire-me">Hire Me</a>
 							</div>
@@ -176,28 +176,32 @@
 													<div class="timeline-item">
 														<div class="circle-dot"></div>
 														<h3 class="timeline-date">
-															<i class="fa fa-calendar"></i> 2013 - 2015
+															<i class="fa fa-calendar"></i> 2021 - 2025 (Reading)
 														</h3>
-														<h4 class="timeline-title">Lorem ipsum dolor sit amet</h4>
-														<p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ab temporibus dolores ullam minima porro aspernatur? Velit laborum voluptatum ad unde corrupti odit facilis, autem aliquam necessitatibus minima reprehenderit molestias.</p>
+														<h4 class="timeline-title">BSc (Hons) in Information Technology
+															Specialising in Cyber Security</h4>
+														<h5 class="timeline-subtitle">Sri Lanka Institute of Information Technology</h5>
+														<p class="timeline-text"></p>
 													</div>
 													<!-- ===== Timeline Item ===== -->
 													<div class="timeline-item">
 														<div class="circle-dot"></div>
 														<h3 class="timeline-date">
-															<i class="fa fa-calendar"></i> 2013 - 2015
+															<i class="fa fa-calendar"></i> 2021
 														</h3>
-														<h4 class="timeline-title">Lorem ipsum dolor sit amet</h4>
-														<p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ab temporibus dolores ullam minima porro aspernatur? Velit laborum voluptatum ad unde corrupti odit facilis, autem aliquam necessitatibus minima reprehenderit molestias.</p>
+														<h4 class="timeline-title">International Advanced Level (IAL)</h4>
+														<h5 class="timeline-subtitle">Horizon College International</h5>
+														<p class="timeline-text">Physical Science Stream<br>&emsp;Information and Communications Technology - A<br>&emsp;Physics - B<br>&emsp;Mathematics - C</p>
 													</div>
 													<!-- ===== Timeline Item ===== -->
 													<div class="timeline-item">
 														<div class="circle-dot"></div>
 														<h3 class="timeline-date">
-															<i class="fa fa-calendar"></i> 2013 - 2015
+															<i class="fa fa-calendar"></i> 2019
 														</h3>
-														<h4 class="timeline-title">Lorem ipsum dolor sit amet</h4>
-														<p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ab temporibus dolores ullam minima porro aspernatur? Velit laborum voluptatum ad unde corrupti odit facilis, autem aliquam necessitatibus minima reprehenderit molestias.</p>
+														<h4 class="timeline-title">International General Certificate of Secondary Education (IGCSE)</h4>
+														<h5 class="timeline-subtitle">Horizon College International</h5>
+														<p class="timeline-text">Four ‘A’ Grades<br>Two ‘C’ Grades<br>One ‘D’ Grade<br><br><br><br><br>&nbsp;</p>
 													</div>
 												</div>
 											</div>
@@ -212,28 +216,31 @@
 													<div class="timeline-item">
 														<div class="circle-dot"></div>
 														<h3 class="timeline-date">
-															<i class="fa fa-calendar"></i> 2013 - 2015
+															<i class="fa fa-calendar"></i> 2018 - Present
 														</h3>
-														<h4 class="timeline-title">Lorem ipsum dolor sit amet</h4>
-														<p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ab temporibus dolores ullam minima porro aspernatur? Velit laborum voluptatum ad unde corrupti odit facilis, autem aliquam necessitatibus minima reprehenderit molestias.</p>
+														<h4 class="timeline-title">Digital Media Consultant - Freelance</h4>
+														<h5 class="timeline-subtitle">Colombo Media House</h5>
+														<p class="timeline-text">●&ensp;Graphic Designing<br>●&ensp;Photography<br>●&ensp;Videography<br>●&ensp;Video Editing<br>●&ensp;Social Media Management<br>●&ensp;UI / UX Designing<br>●&ensp;Web Designing and Development</p>
 													</div>
 													<!-- ===== Timeline Item ===== -->
 													<div class="timeline-item">
 														<div class="circle-dot"></div>
 														<h3 class="timeline-date">
-															<i class="fa fa-calendar"></i> 2013 - 2015
+															<i class="fa fa-calendar"></i> 2020 - 2021
 														</h3>
-														<h4 class="timeline-title">Lorem ipsum dolor sit amet</h4>
-														<p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ab temporibus dolores ullam minima porro aspernatur? Velit laborum voluptatum ad unde corrupti odit facilis, autem aliquam necessitatibus minima reprehenderit molestias.</p>
+														<h4 class="timeline-title">Senior Editor</h4>
+														<h5 class="timeline-subtitle">Suranga Dancing Academy</h5>
+														<p class="timeline-text">●&ensp;Manage the Official Youtube Channel<br>●&ensp;Videography<br>●&ensp;Video Editing<br>●&ensp;Promote the Institution and Institution related activities</p>
 													</div>
 													<!-- ===== Timeline Item ===== -->
 													<div class="timeline-item">
 														<div class="circle-dot"></div>
 														<h3 class="timeline-date">
-															<i class="fa fa-calendar"></i> 2013 - 2015
+															<i class="fa fa-calendar"></i> 2021
 														</h3>
-														<h4 class="timeline-title">Lorem ipsum dolor sit amet</h4>
-														<p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ab temporibus dolores ullam minima porro aspernatur? Velit laborum voluptatum ad unde corrupti odit facilis, autem aliquam necessitatibus minima reprehenderit molestias.</p>
+														<h4 class="timeline-title">Official Campus Ambassador | Intern</h4>
+														<h5 class="timeline-subtitle">International Model United Nations</h5>
+														<p class="timeline-text">●&ensp;Promote IMUN Online Conferences.<br>●&ensp;Inform the public about International Model United Nations conferences & How MUNs play an important role in learning different essentials skills like Negotiation Diplomacy, Leadership, etc.<br>●&ensp;Be a Brand Ambassador of International MUN and promote on social media as well as through different channels.<br>●&ensp;Assist in driving registrations for IMUN online Conferences.</p>
 													</div>
 												</div>
 											</div>
@@ -251,7 +258,7 @@
 
 													<div>
 														<h1 class="skills-title">Frontend Developer</h1>
-														<span class="skills-subtitle">Lorem ipsum dolor sit amet.</span>
+														<span class="skills-subtitle">HTML | CSS | Javascript</span>
 													</div>
 													<i class="uil uil-angle-down skills-arrow"></i>
 												</div>
@@ -261,7 +268,7 @@
 
 													<div>
 														<h1 class="skills-title">UI / UX Design</h1>
-														<span class="skills-subtitle">Lorem ipsum dolor sit amet.</span>
+														<span class="skills-subtitle">Figma | Adobe XD | Adobe Photoshop</span>
 													</div>
 													<i class="uil uil-angle-down skills-arrow"></i>
 												</div>
@@ -271,7 +278,7 @@
 
 													<div>
 														<h1 class="skills-title">Backend Developer</h1>
-														<span class="skills-subtitle">Lorem ipsum dolor sit amet.</span>
+														<span class="skills-subtitle">C# | PHP | Python | Java | SQL</span>
 													</div>
 													<i class="uil uil-angle-down skills-arrow"></i>
 												</div>
