--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<li><a href="#home" class="active"><i class="fa fa-home"></i> Home</a></li>
 					<li><a href="#about"><i class="fa fa-user"></i> About</a></li>
 					<li><a href="#services"><i class="fa fa-list"></i> Services</a></li>
-					<li><a><i class="fa fa-briefcase"></i> Portfolio</a></li>
+					<li><a href="#portfolio"><i class="fa fa-briefcase"></i> Portfolio</a></li>
 					<li><a href="#contact"><i class="fa fa-comment"></i> Contact</a></li>
 					<li><a href="https://www.paypal.com/donate/?hosted_button_id=L23QAZELLCU3E" 
 						onClick="return popup(this, 'Buy Me a Coffee')"><i class="fa fa-mug-hot"></i> Buy me a Coffee</a></li>
